# entmoot

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  multi_opt_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_main.py
.github/workflows/: black.yml  python-package.yml  ruff.yml
api/: Dockerfile  requirements.txt  setup.py
api/api/: celery_tasks.py  core.py  db.py  main.py  schema.py
api/basf_bo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/bo/: __init__.py  digital_twin.py  metric.py  plot.py  torch_tools.py
docs/: conf.py  index.rst  installation.rst  notebooks.rst  quickstart.rst
docs/apidoc/: entmoot.enting.rst  entmoot.gurobioptimizer.rst  entmoot.models.mean_models.rst  entmoot.models.rst  entmoot.models.uncertainty_models.rst  entmoot.optimizers.rst  entmoot.params.rst  entmoot.pyomooptimizer.rst  entmoot.rst  modules.rst
docs/notebooks/: constraint_classes.ipynb  (+6 more)
entmoot/: __init__.py  __version__.py  acquisition.py  benchmarks.py  constraints.py  problem_config.py  space.py  utils.py
tests/: test_bring_your_own_constraints.py  test_compare_problems.py  test_consistency.py  test_consistency_gurobi.py  test_consistency_pyomo.py  test_constraints_pyomo.py  test_curr.py  test_interface.py  test_interface_entmootopti.py  test_model_params.py  test_objectives.py  test_objectives_pyomo.py  test_optimality_gurobi.py  test_optimality_pyomo.py  test_optimizer.py  test_optimizer_models.py  test_sampler.py  test_space.py  test_transformer.py
(+72 files in other folders)
